Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,8 @@
    "outputs": [],
    "source": [
     "def calculate_cdf(lst, X):\n",
-    "    count = \n",
+    "    count = 0\n",
+    "    for val\n",
     "    pass\n",
     "\n",
     "# test data\n",
