--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,9 @@
    "source": [
     "def calculate_cdf(lst, X):\n",
     "    count = 0\n",
-    "    for val\n",
+    "    for val in lst:\n",
+    "        if val < X:\n",
+    "            \n",
     "    pass\n",
     "\n",
     "# test data\n",
