--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
     "    count = 0\n",
     "    for val in lst:\n",
     "        if val < X:\n",
-    "            \n",
+    "            count += 1\n",
     "    pass\n",
     "\n",
     "# test data\n",
