Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,7 @@
     "        if val < X:\n",
     "            count += 1\n",
     "    cp = count / len(lst)\n",
-    "    pass\n",
+    "    return \n",
     "\n",
     "# test data\n",
     "test_lst = [1,2,3]\n",
