--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -46,8 +46,8 @@
     "    for val in lst:\n",
     "        if val < X:\n",
     "            count += 1\n",
-    "    cp = round(count / len(lst)\n",
-    "    return cp\n",
+    "    cp = count / len(lst)\n",
+    "    return \n",
     "\n",
     "# test data\n",
     "test_lst = [1,2,3]\n",
