Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -39,14 +39,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.333"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def calculate_cdf(lst, X):\n",
     "    count = 0\n",
     "    for val in lst:\n",
     "        if val < X:\n",
     "            count += 1\n",
-    "    cp = round(count / len(lst)\n",
+    "    cp = round((count / len(lst)), 3)\n",
     "    return cp\n",
     "\n",
     "# test data\n",
