--- a/index.ipynb
+++ b/index.ipynb
@@ -37,16 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.333"
+       "0.667"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
     "def calculate_cdf(lst, X):\n",
     "    count = 0\n",
     "    for val in lst:\n",
-    "        if val < X:\n",
+    "        if val <= X:\n",
     "            count += 1\n",
     "    cp = round((count / len(lst)), 3)\n",
     "    return cp\n",
