Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "die_lst = \n",
+    "die_lst = [x for x in range(7)]\n",
     "die_cum = None\n",
     "\n",
     "die_cum\n",
