--- a/index.ipynb
+++ b/index.ipynb
@@ -92,8 +92,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "die_lst = [x for x in range(7)]\n",
-    "die_cum = None\n",
+    "die_lst = [x for x in range(1,7)]\n",
+    "die_cum = ca\n",
     "\n",
     "die_cum\n",
     "\n",
