--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,7 @@
    "outputs": [],
    "source": [
     "die_lst = [x for x in range(1,7)]\n",
-    "die_cum = ca\n",
+    "die_cum = \n",
     "\n",
     "die_cum\n",
     "\n",
