--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "die_lst = [x for x in range(1,7)]\n",
+    "die_lst = []\n",
     "die_cum = \n",
     "\n",
     "die_cum\n",
