Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,8 @@
    "outputs": [],
    "source": [
     "die_lst = [x for x in range(1,7)]\n",
-    "die_cum = \n",
+    "die_cum = []\n",
+    "\n",
     "\n",
     "die_cum\n",
     "\n",
