--- a/index.ipynb
+++ b/index.ipynb
@@ -95,6 +95,7 @@
     "die_lst = [x for x in range(1,7)]\n",
     "die_cum = []\n",
     "\n",
+    "for die \n",
     "\n",
     "die_cum\n",
     "\n",
