--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,8 @@
     "die_lst = [x for x in range(1,7)]\n",
     "die_cum = []\n",
     "\n",
-    "for die \n",
+    "for die in die_list:\n",
+    "    \n",
     "\n",
     "die_cum\n",
     "\n",
