Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
     "die_cum = []\n",
     "\n",
     "for die in die_list:\n",
-    "    \n",
+    "    die_cum.append()\n",
     "\n",
     "die_cum\n",
     "\n",
