--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
     "die_cum = []\n",
     "\n",
     "for die in die_list:\n",
-    "    die_cum.append()\n",
+    "    die_cum.append(calculate_cdf(test_lst, test_X))\n",
     "\n",
     "die_cum\n",
     "\n",
