Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.plot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
