--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "plt.style."
    ]
   },
   {
