Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -131,7 +131,10 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "plt.style.use('ggplot')"
+    "plt.style.use('ggplot')\n",
+    "\n",
+    "plt.stem(die_lis, pmf, '-', 'go', 'r-');\n",
+    "plt.title (\"A Probability Mass Function\");"
    ]
   },
   {
