Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -133,8 +133,8 @@
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('ggplot')\n",
     "\n",
-    "plt.stem(die_lis, pmf, '-', 'go', 'r-');\n",
-    "plt.title (\"A Probability Mass Function\");"
+    "plt.stem(die_lst, die_cum, '-', 'go', 'r-');\n",
+    "plt.title (\"D\");"
    ]
   },
   {
