Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
     "plt.style.use('ggplot')\n",
     "\n",
     "plt.stem(die_lst, die_cum, '-', 'go', 'r-');\n",
-    "plt.title (\"D\");"
+    "plt.title (\"Die Roll - Cumulative Distribution Function\");\n"
    ]
   },
   {
