Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,10 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "np.histogram(die_)"
+   ]
   },
   {
    "cell_type": "markdown",
