--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
    "source": [
     "import numpy as np\n",
     "np.histogram(die_cum)\n",
-    "plt."
+    "plt.step(npcums)"
    ]
   },
   {
