Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,25 +213,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(array([1, 1, 1, 1, 1, 1]),\n",
-       " array([0.167     , 0.30583333, 0.44466667, 0.5835    , 0.72233333,\n",
-       "        0.86116667, 1.        ]))"
+       " array([1.        , 1.83333333, 2.66666667, 3.5       , 4.33333333,\n",
+       "        5.16666667, 6.        ]))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
-    "hist = np.histogram(die_cum, 6)\n",
+    "hist = np.histogram(die_lst, 6)\n",
     "hist"
    ]
   },
