Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,9 @@
    "source": [
     "import numpy as np\n",
     "hist = np.histogram(die_lst, bins=6, range=(1, 7))\n",
-    "# hist = np.histogram(sample, bins=6, range=(1, 7), normed=True)\n",
+    "\n",
+    "# taken from solutions page\n",
+    "# hist[1][]\n",
     "plt.step(hist[1][:-1], np.cumsum(hist[0]))\n",
     "plt.title(\"Die Roll -  Cumulative Distribution Function - V2\")\n",
     "plt.xlabel(\"Die Values\")\n",
