--- a/index.ipynb
+++ b/index.ipynb
@@ -213,15 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([1, 1, 1, 1, 1, 1]), array([1., 2., 3., 4., 5., 6., 7.]))\n",
-      "[1. 2. 3. 4. 5. 6.]\n"
+      "(array([1, 1, 1, 1, 1, 1]), array([1., 2., 3., 4., 5., 6., 7.]))\n"
      ]
     },
     {
@@ -240,8 +239,9 @@
     "hist = np.histogram(die_lst, bins=6, range=(1, 7))\n",
     "print(hist)\n",
     "# taken from solutions page\n",
-    "print(hist[1][:-1])\n",
     "plt.step(hist[1][:-1], np.cumsum(hist[0]))\n",
+    "\n",
+    "# I know how to do this part\n",
     "plt.title(\"Die Roll -  Cumulative Distribution Function - V2\")\n",
     "plt.xlabel(\"Die Values\")\n",
     "plt.ylabel(\"Cumulative Probability\")\n",
