Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,14 +213,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([1, 1, 1, 1, 1, 1]), array([1., 2., 3., 4., 5., 6., 7.]))\n"
+      "(array([1, 1, 1, 1, 1, 1]), array([1., 2., 3., 4., 5., 6., 7.]))\n",
+      "[1 1 1 1 1 1]\n"
      ]
     },
     {
@@ -239,8 +240,9 @@
     "hist = np.histogram(die_lst, bins=6, range=(1, 7))\n",
     "print(hist)\n",
     "# taken from solutions page\n",
+    "# np.cumsum() comp\n",
     "plt.step(hist[1][:-1], np.cumsum(hist[0]))\n",
-    "print(np.cumsum(hist[0]))\n",
+    "\n",
     "# I know how to do this part\n",
     "plt.title(\"Die Roll -  Cumulative Distribution Function - V2\")\n",
     "plt.xlabel(\"Die Values\")\n",
