Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,15 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([1, 1, 1, 1, 1, 1]), array([1., 2., 3., 4., 5., 6., 7.]))\n",
-      "[1 1 1 1 1 1]\n"
+      "(array([1, 1, 1, 1, 1, 1]), array([1., 2., 3., 4., 5., 6., 7.]))\n"
      ]
     },
     {
@@ -238,9 +237,10 @@
    "source": [
     "import numpy as np\n",
     "hist = np.histogram(die_lst, bins=6, range=(1, 7))\n",
-    "print(hist)\n",
+    "print(hist[0])\n",
     "# taken from solutions page\n",
-    "# np.cumsum() comp\n",
+    "# np.cumsum() computes the commulative sum\n",
+    "\n",
     "plt.step(hist[1][:-1], np.cumsum(hist[0]))\n",
     "\n",
     "# I know how to do this part\n",
